--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
   <title>Etch-a-Sketch</title>
 </head>
 <body>
-
-  <script src="script.js"></script>
+    <button class="resolutionBtn">Change Resolution</button>
+    <div class="container"></div>
 
 </body>
 </html>
